# classic-compsci-python

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
ccspp/: __init__.py
ccspp/ch1/: bitstr_compression.py  hanoi.py
ccspp/ch2/: cannibals.py  dna_search.py
ccspp/ch3/: __init__.py  csp.py  map_coloring.py
ccspp/ch4/: dijkstra.py
src/: bitstr_compression.py  fibonacci.py  pi.py
src/ch1/: hanoi.py
src/ch2/: maze.py
